k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-seatyrants-website-backend-deployment
  namespace: prod-seatyrants-website-backend
  labels:
    app: prod-seatyrants-website-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prod-seatyrants-website-backend
  template:
    metadata:
      labels:
        app: prod-seatyrants-website-backend
    spec:
      containers:
        - name: prod-seatyrants-website-backend
          image: corentin35/seatyrants-website-backend:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          readinessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
      imagePullSecrets:
        - name: regcred
