k8s/production/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-seatyrants-website-backend-worker-deployment
  namespace: prod-seatyrants-website-backend
  labels:
    app: prod-seatyrants-website-backend-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-seatyrants-website-backend-worker
  template:
    metadata:
      labels:
        app: prod-seatyrants-website-backend-worker
    spec:
      containers:
        - name: prod-seatyrants-website-backend-worker
          image: corentin35/seatyrants-website-backend:${TAG_VERSION}
          imagePullPolicy: Always
          command: ['npm', 'run', 'queue:work']
          resources:
            requests:
              cpu: '50m'
              memory: '128Mi'
            limits:
              cpu: '100m'
              memory: '256Mi'
      imagePullSecrets:
        - name: regcred
